# neutrino-settings-generator

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPERATIONS.md  QUALITY_GATES.md  README.de.md  README.en.md  README.md  pyproject.toml  release-please-config.json  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  release.yml  sync-and-build.yml
app/: next.config.js  package.json  tailwind.config.js  tsconfig.json
app/data/: providers.json  sources.json
converter/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OPERATIONS.md  README.de.md  README.en.md  README.md  RELEASE_PROCESS.md  SECURITY.md  pyproject.toml  requirements.txt
converter/.github/: dependabot.yml
converter/.github/ISSUE_TEMPLATE/: bug_report.yml
converter/.github/workflows/: ci.yml  sync-and-build.yml
converter/e2neutrino/: __init__.py  __main__.py  converter.py  ingest.py  io_enigma.py  io_neutrino.py  logging_conf.py  models.py  validate.py
converter/e2neutrino/adapters/: dvbsi.py  jsonapi.py  neutrino.py
converter/examples/: name-map.example.json  sources.example.yml
converter/samples/enigma2_profile_example/: bouquets.tv  userbouquet.favourites.tv
converter/scripts/: package_outputs.py
converter/tests/: __init__.py  conftest.py  test_convert_basic.py  test_golden_output.py  test_ingest_sources.py
converter/tests/fixtures/: json_payload.json  sample_lamedb
converter/tests/fixtures/enigma_golden/: bouquets.tv
converter/tests/fixtures/golden/: bouquets.xml
docs/: PUBLISHING.md
e2neutrino/: __main__.py  converter.py  ingest.py  io_enigma.py  io_neutrino.py  models.py  validate.py
e2neutrino/adapters/: dvbsi.py  (+10 more)
examples/: name-map.example.yaml  sources.example.yml  sources.official.yml
metadata/: packages.yml
neutrino-settings/: README.md
scripts/: generate_target_readme.py  package_outputs.py
tests/: test_adapter_validation.py  test_adapter_wilhelm_tel.py  test_convert_basic.py  test_golden_output.py  test_ingest_sources.py  test_scanfiles.py
(+21 files in other folders)
